2003-02-18  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/raw/envidataset.cpp: Write support via Create() method
	added.

2003-02-15  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/pymod/samples/val_repl.py: Created directory for storing Python
	sample scripts along with the first sample.

2003-02-03  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/raw/pnmdataset.cpp: Added support for reading
	and writing 16-bit images.

2003-01-31  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/jpeg2000/jpeg2000dataset.cpp: Added support for reading
	and writing GeoJP2 information into UUID box in JP2 files. Modified
	JasPer library required for this feature:
	ftp://ftp.remotesensing.org/gdal/jasper-1.600.0.uuid.tar.gz

2003-01-30  Frank Warmerdam  <warmerdam@pobox.com>

	* added --with-kakadu switch to configure, moved jp2kakdataset into
	it's own frmts/jp2kak directory.

2003-01-27  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: don't include /usr/local in include and lib path by 
	default.  Added --with-local configure directive.

2003-01-07  Frank Warmerdam  <warmerdam@pobox.com>

	* ntf: added support for polygon assembly for boundary line products.

===============================================================================
	
2002-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* Release GDAL/OGR 1.1.8.0.

	* gdal/frmts/nitf: Implemented an NITF reader/writer.

2002-12-07  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/bmp/{bmpimagedataset.cpp, frmts_bmp.html}:
	New driver for Microsoft Windows Device Independent Bitmaps.
	Both Create() and CreateCopy() functions implemented, support
	for reading and writing worldfiles.

2002-11-30  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gtiff: Added support for writing generic metadata. 
	Added support for updating metadata and projections of existing files.
	Added improvements to GeoTIFF info writing including writing a