@@ -4,9 +4,8 @@ GDAL_ROOT	=	../..
 include $(GDAL_ROOT)/GDALmake.opt
 
 OBJ	=	rawdataset.o ehdrdataset.o pauxdataset.o doq1dataset.o \
-		doq2dataset.o mffdataset.o hkvdataset.o effdataset.o \
-		pnmdataset.o fujibasdataset.o envidataset.o gscdataset.o \
-		fastdataset.o
+		doq2dataset.o mffdataset.o hkvdataset.o pnmdataset.o \
+		fujibasdataset.o envidataset.o gscdataset.o fastdataset.o
 
 default:	$(OBJ)
 
