@@ -1,6 +1,6 @@
 
 OBJ	=	rawdataset.obj ehdrdataset.obj pauxdataset.obj doq1dataset.obj\
-		hkvdataset.obj mffdataset.obj effdataset.obj pnmdataset.obj \
+		hkvdataset.obj mffdataset.obj pnmdataset.obj \
 		fujibasdataset.obj doq2dataset.obj envidataset.obj \
 		gscdataset.obj fastdataset.obj
 
