@@ -64,12 +64,6 @@
 </td><td> Yes
 </td></tr>
 
-<tr><td> <a href="frmt_various.html#EFF">Eosat Fast Format</a>
-</td><td> EFF
-</td><td> No
-</td><td> No
-</td></tr>
-
 <tr><td> <a href="frmt_ecw.html">ERMapper Compressed Wavelets (.ecw)</a>
 </td><td> ECW
 </td><td> Yes
