@@ -115,18 +115,6 @@ is captured.
 
 NOTE: Implemented as <tt>gdal/frmts/dted/dteddataset.cpp</tt>.<p>
 
-<h2><a name="EFF">EFF -- Eosat Fast Format</a></h2>
-
-Support for read access to EOSAT Fast Format data is available in GDAL.  
-EOSAT datasets normally consist of one or more raster data files (eg. 
-BAND1.DAT, BAND2.DAT, ...) and a header file which must be called HEADER.DAT.
-To open the dataset select the HEADER.DAT file.<p>
-
-Currently only the raster data is accessed.  Georeferencing, and other meta
-data is ignored.<p>
-
-NOTE: Implemented as <tt>gdal/frmts/raw/effdataset.cpp</tt>.<p>
-
 <h2><a name="EHdr">EHdr -- ESRI .hdr Labelled</h2>
 
 GDAL supports the ESRI .hdr labelling format for reading raw raster data
